# maelstrom-a6

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  benchmark-results.md  pyproject.toml  requirements-cpu.txt
apptainer/: a6-cuda.def  a6-rocm.def  a6.def  vissl-arm64.def  vissl-docker.def  vissl-rocm.def  vissl.def
data/: gwl.nc  model_level_133_jan_2020.nc
data/deepclusterv2/1/: 20130731t1525_germany_2.tif  20130731t1530_germany_1.tif  20130731t1630_germany_3.tif  20130731t1710_germany_1.tif  20130731t1715_germany_2.tif
docker/: a6-cuda-arm.Dockerfile  a6-cuda.Dockerfile  a6-rocm.Dockerfile  a6.Dockerfile  ecmwflibs-0.6.1-cp311-cp311-linux_aarch64.whl  vissl-rocm.Dockerfile  vissl.Dockerfile
jube/: README.md  run.py  submit.yaml  torchrun_jsc.py
mlflow/: Dockerfile  MLproject  cluster.yaml  compute-backend-config-dcv2.yaml  compute-backend-config.yaml  concatenate_data_files.py  dcv2.sbatch  deploy.py  execute_with_mantik.py  forecast_errors.py  grid-search.yaml  grid_search.py  infer.py  main.py  mantik-distributed.yaml  mantik.yaml  pca_and_kmeans.py  preprocess_turbine.py  recipe.def  run-forecast-errors.sbatch  run-preprocess-turbine-data.sbatch  run.sh  train.py  train_dcv2.py  train_gwl_cnn.py  train_hdbscan.py  train_kmeans.py  train_temporal.py  unicore-config.json  unicore-config.yaml
mlflow/a6/: MLproject  unicore-config.yaml
mlflow/deepclusterv2/: .jube.yaml.swp  MLproject  README.md  jube.sbatch  jube.sbatch.in  jube.yaml  run.sbatch  unicore-config.yaml
mlflow/deepclusterv2/modified/: log_hooks.py
notebooks/: Eigenfaces_and_more.ipynb  add_mean_std_to_netcdf_attrs.ipynb  dcv2_analysis.ipynb  deepclusterv2.ipynb  example_dataset_generation.ipynb  forecast-model.ipynb  forecast_model.ipynb  gwl_analysis.ipynb  gwl_with_labels.ipynb  kernel_and_pooling.ipynb  local_dimension_and_persistence.ipynb  lswr_power_production.ipynb  mnist-analysis.ipynb  mnist_analysis.ipynb  pca.ipynb  pca_kmeans.ipynb  performance_analysis.ipynb
notebooks/e4/: jupyter_kernel_recipe.def  kernel.json  parallel_lifetimes.ipynb  upload_kernel.sh
notebooks/jsc/: README.md  jupyter_kernel_recipe.def  parallel_lifetimes.ipynb
notebooks/juwels/: README.md  jupyter_kernel_recipe.def  kernel.json  parallel_lifetimes.ipynb  upload_kernel.sh
notebooks/maelstrom-bootcamp-2023/: 01-data-insight.ipynb  01-jupterjsc.ipynb  02-DeepClusterV2.ipynb  02-data-insight.ipynb  03-DeepClusterV2.ipynb
notebooks/maelstrom-bootcamp/day-1/: 01-ssh-and-slurm.ipynb  02-data-insight.ipynb  utils.py
notebooks/maelstrom-bootcamp/day-2/: 03-energy-production-forecast.ipynb  04-large-scale-weather-regime-classification.ipynb
scripts/: convert_to_tif.py  create_turbine_data.py  dataset_generation.py  era5_to_daily.py  mnist_resnet.py  pca_k_means_scree_test.py  run-create-turbine-data.sbatch  train_dcv2.py
scripts/e4/: application.py  runscript.sh
scripts/ipyparallel/: application.py  runscript.sh
scripts/juwels/: application.py  runscript.sh
scripts/mlflow/: main.py
src/a6/: __init__.py  types.py
src/a6/benchmark/: __init__.py  dask_benchmark_context.py  execute.py  utils.py
src/a6/cli/: __init__.py  aws.py  compute_backend.py  data.py  deploy.py  grid_search.py  inference.py  main.py  training.py
src/a6/datasets/: __init__.py  _base.py  coordinates.py  crop.py  dimensions.py  dwd.py  ecmwf_ifs_hres.py  era5.py  variables.py
src/a6/dcv2/: __init__.py  _checkpoints.py  _initialization.py  _parse.py  _settings.py  averaging.py  cluster.py  dataset.py  entry.py  initialization.py  logs.py  models.py  parse.py  settings.py  stats.py  train.py  utils.py
src/a6/entry/: __init__.py  dcv2.py  forecast.py  gwl.py  preprocess.py
src/a6/evaluation/: __init__.py  evaluate.py  forecast.py  metrics.py  modes.py  residuals.py
src/a6/features/: __init__.py  determination.py  features.py
src/a6/metrics/: __init__.py  turbine.py
src/a6/models/: __init__.py  checkpoints.py  cnn.py  resnet.py  resnet_dcv2.py
src/a6/modes/: __init__.py  determination.py  modes.py
src/a6/parallel/: __init__.py  _client.py  ipyparallel.py  slurm.py  types.py
src/a6/plotting/: __init__.py  _colors.py  assignments.py  autocorrelation.py  clustering.py  coastlines.py  embeddings.py  extents.py  helpers.py  mantik.py  pca.py  transitions.py
src/a6/studies/: __init__.py  _shared.py  cluster.py  cross_validation.py  grid_search.py  hyperparameters.py  pca_and_hdbscan.py  pca_and_kmeans.py  temporal.py
src/a6/testing/: __init__.py  _ellipse.py  contexts.py  create.py  data_factories.py  data_points.py  env.py  fake_datasets.py  grids.py
src/a6/training/: __init__.py  cross_validation.py  grid_search.py  groups.py  train.py
src/a6/utils/: __init__.py  benchmark.py  coordinates.py  cpus.py  dimensions.py  distributed.py  energy.py  functional.py  logging.py  mantik.py  models.py  parallelize.py  paths.py  slicing.py  slurm.py  standardization.py  time_measurement.py  times.py  usage.py  variables.py  weighting.py
src/lifetimes/: __init__.py  hyperparameters.py  pca_and_kmeans.py
src/lifetimes/aws/: __init__.py  cli.py
src/lifetimes/benchmark/: __init__.py  dask_benchmark_context.py  execute.py  utils.py
src/lifetimes/cli/: __init__.py  aws.py  conversion.py  data.py  inference.py  training.py
src/lifetimes/coordinate_transformations/: __init__.py  abstract_transformation.py  base_transformation.py  invertible_transformation.py  orthogonal_transformation.py  pca_transformation.py
src/lifetimes/datasets/: __init__.py  ecmwf_ifs_hres.py
src/lifetimes/features/: __init__.py  datasets.py  determination.py  features.py
src/lifetimes/modes/: __init__.py  determination.py  modes.py
src/lifetimes/parallel/: __init__.py  _client.py  ipyparallel.py  slurm.py
src/lifetimes/plotting/: __init__.py  animation.py  clustering.py  mantik.py  pca.py
src/lifetimes/studies/: __init__.py  _shared.py  hyperparameters.py  pca_and_hdbscan.py  pca_and_kmeans.py  temporal.py
src/tests/: test_hyperparameters.py
(+305 files in other folders)
