[tool.poetry]
name = "a6"
version = "0.1.0"
description = "Tool to determine mode a6 in datasets"
packages = [{ include = "a6", from = "src" }]
authors = ["Fabian Emmerich <fabian.emmerich@4-cast.de>"]

[tool.poetry.scripts]
a6 = "a6.cli.main:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bokeh = "^2.4.2"
click = "^8.1.3"
Cartopy = "^0.21.0"
dask = {extras = ["distributed"], version = "^2022.2.0"}
dask-jobqueue = "^0.7.3"
ecmwflibs = "^0.4.17" # cartopy dependency 0.4.3 not on pypi
hdbscan = "^0.8.28"
# HDBSCAN import fails for joblib>1.1.0
joblib = "1.1.0"
ipyparallel = "^8.2.0"
matplotlib = "^3.5.1"
mantik = "^0.1.1"
mlflow = "^1.27.0"
netCDF4 = "^1.5.8"
numpy = "^1.21.4"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
scipy = "^1.9.2"
xarray = "^2022.10.0"
boto3 = {version = "^1.23.0", optional = true}
jupyter = {version = "^1.0.0", optional = true}
python-dotenv = {version = "^0.20.0", optional = true}
sagemaker = {version = "^2.89.0", optional = true}

[tool.poetry.extras]
mlflow = ["boto3", "sagemaker"]
notebooks = ["jupyter", "python-dotenv"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=a6 --cov-report term-missing"

[tool.bandit]

[tool.black]
line-length = 80

[tool.flake8]
max-line-length = 80
per-file-ignores = [
    "__init__.py:F401,E501",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage]

[tool.coverage.report]
omit = [
    "*/testing/*",
    "*/benchmark/*",
    "*/parallel/*",
]
exclude_lines = [
    'def __repr__',
    # Don't complain if tests don't hit defensive assertion code:
    'raise NotImplementedError',
    'return NotImplementedError',
    # Don't complain if non-runnable code isn't run:
    'if __name__ == .__main__.:',
    # Don't complain about abstract methods, they aren't run:
    '@(abc\.)?abstractmethod',
]
